--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -40,6 +40,7 @@
   display: block;
 }
 
-.box-icon > span::before {
-  margin-left: 7px;
+.sticker-choose {
+  margin: 5px;
+  border-radius: 5%;
 }
